--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,24 @@
-version: '3.3'
-
 services:
-  app:
-    build: .
+  db:
+    image: postgres:latest
+    environment:
+      - POSTGRES_DB=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
 
+#
     volumes:
-      - .:/app
+      - ./data/db:/var/lib/postgresql/data
+
+  web:
+    build: .
+#    command: python manage.py runserver 0.0.0.0:8000
+    depends_on:
+      - db
+#    environment:
+#      - POSTGRES_HOST = db
+#      - POSTGRES_DB=postgres
     ports:
-      - "8000:8000"
+      - "8088:8088"
+    volumes:
+      - .:/code
